--- a/observability/logging/logging_release_notes/logging-5-9-release-notes.adoc
+++ b/observability/logging/logging_release_notes/logging-5-9-release-notes.adoc
@@ -8,7 +8,9 @@ toc::[]
 
 include::snippets/logging-compatibility-snip.adoc[]
 
-include::snippets/logging-stable-updates-snip.adoc[]
+include::snippets/logging-stable-updates-snip.adoc[leveloffset=+1]
+
+include::modules/logging-release-notes-5-9-8.adoc[leveloffset=+1]
 
 include::modules/logging-release-notes-5-9-7.adoc[leveloffset=+1]
 
