OCPBUGS-43753:updates CIDR support for SDN to OVN-K migration

--- a/modules/nw-ovn-kubernetes-migration-about.adoc
+++ b/modules/nw-ovn-kubernetes-migration-about.adoc
@@ -70,7 +70,7 @@ While the OVN-Kubernetes network plugin implements many of the capabilities pres
 * Egress router pods
 --
 
-* Before migrating to OVN-Kubernetes, ensure that the following IP address ranges are not in use: `100.64.0.0/16`, `169.254.169.0/29`, `100.88.0.0/16`, `fd98::/64`, `fd69::/125`, and `fd97::/64`. OVN-Kubernetes uses these ranges internally. Do not include any of these ranges in any other CIDR definitions in your cluster or infrastructure.
+* Before migrating to OVN-Kubernetes, ensure that the following IP address ranges are not in use: `100.64.0.0/16` and `100.88.0.0/16`. OVN-Kubernetes uses these ranges internally. If these ranges are in use, see xref:../../../networking/cluster-network-operator.adoc#cluster-network-operator[Understanding the Cluster Network Operator] for instructions on how to change these ranges before migration.
 
 The following sections highlight the differences in configuration between the aforementioned capabilities in OVN-Kubernetes and OpenShift SDN network plugins.
 
