--- a/observability/logging/logging-6.0/log6x-release-notes.adoc
+++ b/observability/logging/logging-6.0/log6x-release-notes.adoc
@@ -1,11 +1,14 @@
 :_mod-docs-content-type: ASSEMBLY
 include::_attributes/common-attributes.adoc[]
 [id="log6x-release-notes"]
-= Logging 6.0.0
+= Logging Release Notes
 :context: logging-6x
 
 toc::[]
 
+include::modules/log6x-rn-6.0.1.adoc[leveloffset=+1]
+
+== Logging 6.0.0
 This release includes link:https://access.redhat.com/errata/RHBA-2024:6693[{logging-uc} {for} Bug Fix Release 6.0.0]
 
 include::snippets/logging-compatibility-snip.adoc[]
@@ -23,7 +26,7 @@ include::snippets/logging-compatibility-snip.adoc[]
 |===
 
 [id="log6x-release-notes-6-0-0-removal-notice"]
-== Removal notice
+=== Removal notice
 
 * With this release, {logging} no longer supports the `ClusterLogging.logging.openshift.io` and `ClusterLogForwarder.logging.openshift.io` custom resources. Refer to the product documentation for details on the replacement features. (link:https://issues.redhat.com/browse/LOG-5803[LOG-5803])
 
@@ -35,7 +38,7 @@ In order to continue to use Elasticsearch and Kibana managed by the elasticsearc
 ====
 
 [id="log6x-release-notes-6-0-0-enhancements"]
-== New features and enhancements
+=== New features and enhancements
 
 * This feature introduces a new architecture for {logging} {for} by shifting component responsibilities to their relevant Operators, such as for storage, visualization, and collection. It introduces the `ClusterLogForwarder.observability.openshift.io` API for log collection and forwarding. Support for the `ClusterLogging.logging.openshift.io` and `ClusterLogForwarder.logging.openshift.io` APIs, along with the Red Hat managed Elastic stack (Elasticsearch and Kibana), is removed. Users are encouraged to migrate to the Red Hat `LokiStack` for log storage. Existing managed Elasticsearch deployments can be used for a limited time. Automated migration for log collection is not provided, so administrators need to create a new ClusterLogForwarder.observability.openshift.io specification to replace their previous custom resources. Refer to the official product documentation for more details. (link:https://issues.redhat.com/browse/LOG-3493[LOG-3493])
 
@@ -62,16 +65,16 @@ In order to continue to use Elasticsearch and Kibana managed by the elasticsearc
 * This enhancement improves Azure storage secret validation by providing early warnings for specific error conditions. (link:https://issues.redhat.com/browse/LOG-4571[LOG-4571])
 
 [id="log6x-release-notes-6-0-0-technology-preview-features"]
-== Technology Preview features
+=== Technology Preview features
 
 * This release introduces a Technology Preview feature for log forwarding using OpenTelemetry. A new output type,` OTLP`, allows sending JSON-encoded log records using the OpenTelemetry data model and resource semantic conventions. (link:https://issues.redhat.com/browse/LOG-4225[LOG-4225])
 
 [id="log6x-release-notes-6-0-0-bug-fixes"]
-== Bug fixes
+=== Bug fixes
 
 * Before this update, the `CollectorHighErrorRate` and `CollectorVeryHighErrorRate` alerts were still present. With this update, both alerts are removed in the {logging} 6.0 release but might return in a future release. (link:https://issues.redhat.com/browse/LOG-3432[LOG-3432])
 
 [id="log6x-release-notes-6-0-0-CVEs"]
-== CVEs
+=== CVEs
 
 * link:https://access.redhat.com/security/cve/CVE-2024-34397[CVE-2024-34397]
