Restored the Ext. Auth. installation for the ROSA doc set

--- a/rosa_hcp/rosa-hcp-sts-creating-a-cluster-ext-auth.adoc
+++ b/rosa_hcp/rosa-hcp-sts-creating-a-cluster-ext-auth.adoc
@@ -21,7 +21,9 @@ include::snippets/imp-rosa-hcp-no-shared-vpc-support.adoc[leveloffset=+0]
 ====
 
 .Further reading
+ifdef::openshift-rosa-hcp[]
 * For a comparison between {hcp-title} and ROSA Classic, see the xref:../rosa_architecture/rosa-architecture-models.adoc#rosa-hcp-classic-comparison_rosa-architecture-models[Comparing architecture models] documentation.
+endif::openshift-rosa-hcp[]
 * See the AWS documentation for information about link:https://docs.aws.amazon.com/rosa/latest/userguide/getting-started-hcp.html[Getting started with ROSA with HCP using the ROSA CLI in auto mode].
 
 //.Additional resources
