bugfix: standardise vsphere titles suffix

--- a/installing/installing_vsphere/installing-vsphere-three-node.adoc
+++ b/installing/installing_vsphere/installing-vsphere-three-node.adoc
@@ -14,4 +14,4 @@ include::modules/installation-three-node-cluster-cloud-provider.adoc[leveloffset
 
 == Next steps
 * xref:../../installing/installing_vsphere/ipi/installing-vsphere-installer-provisioned-customizations.adoc#installing-vsphere-installer-provisioned-customizations[Installing a cluster on vSphere with customizations]
-* xref:../../installing/installing_vsphere/upi/installing-vsphere.adoc#installing-vsphere[Installing a cluster on vSphere with user-provisioned infrastructure]
+* xref:../../installing/installing_vsphere/upi/installing-vsphere.adoc#installing-vsphere[Installing a cluster on vSphere]
