--- a/installing/installing_vsphere/ipi/ipi-vsphere-preparing-to-install.adoc
+++ b/installing/installing_vsphere/ipi/ipi-vsphere-preparing-to-install.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="ipi-vsphere-preparing-to-install"]
-= Preparing to install a cluster using installer-provisioned infrastructure
+= Preparing to install a cluster
 include::_attributes/common-attributes.adoc[]
 :context: ipi-vsphere-preparing-to-install
 
