--- a/installing/installing_vsphere/upi/upi-vsphere-installation-reqs.adoc
+++ b/installing/installing_vsphere/upi/upi-vsphere-installation-reqs.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="upi-vsphere-installation-reqs"]
-= vSphere installation requirements for user-provisioned infrastructure
+= vSphere installation requirements
 include::_attributes/common-attributes.adoc[]
 :context: upi-vsphere-installation-reqs
 
