--- a/installing/installing_vsphere/upi/upi-vsphere-preparing-to-install.adoc
+++ b/installing/installing_vsphere/upi/upi-vsphere-preparing-to-install.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="upi-vsphere-preparing-to-install"]
-= Preparing to install a cluster using user-provisioned infrastructure
+= Preparing to install a cluster
 include::_attributes/common-attributes.adoc[]
 :context: upi-vsphere-preparing-to-install
 
