bugfix: descriptive titles accuracy

--- a/modules/installation-configuration-parameters.adoc
+++ b/modules/installation-configuration-parameters.adoc
@@ -2071,7 +2071,7 @@ Use the `bootMACAddress` configuration setting to enable Ironic to identify the 
 |The URL for communicating with the host's BMC controller.
 The address configuration setting specifies the protocol.
 For example, `redfish+http://10.10.10.1:8000/redfish/v1/Systems/1234` enables Redfish.
-For more information, see "BMC addressing" in the "Deploying installer-provisioned clusters on bare metal" section.
+For more information, see "BMC addressing" in the "Installing on bare metal as installer-provisioned infrastructure cluster" section.
 |URL.
 
 |platform:
