--- a/modules/virt-example-nmstate-IP-management.adoc
+++ b/modules/virt-example-nmstate-IP-management.adoc
@@ -104,7 +104,7 @@ To define a DNS configuration for a network interface, you must initially specif
 ====
 You cannot use `br-ex` bridge, an OVNKubernetes-managed Open vSwitch bridge, as the interface when configuring DNS resolvers unless you manually configured a customized `br-ex` bridge.
 
-For more information, see "Creating a manifest object that includes a customized br-ex bridge" in the _Deploying installer-provisioned clusters on bare metal_ document or the _Installing a user-provisioned cluster on bare metal_ document.
+For more information, see "Creating a manifest object that includes a customized br-ex bridge" in the _Installing on bare metal as installer-provisioned infrastructure cluster_ document or the _Installing a user-provisioned cluster on bare metal_ document.
 ====
 
 The following example shows a default situation that stores DNS values globally:
