--- a/installing/overview/cluster-capabilities.adoc
+++ b/installing/overview/cluster-capabilities.adoc
@@ -32,7 +32,7 @@ include::modules/cluster-bare-metal-operator.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
 .Additional resources
-* xref:../../installing/installing_bare_metal_ipi/ipi-install-overview.adoc#ipi-install-overview[Deploying installer-provisioned clusters on bare metal]
+* xref:../../installing/installing_bare_metal_ipi/ipi-install-overview.adoc#ipi-install-overview[Installing on bare metal as installer-provisioned infrastructure cluster]
 * xref:../../installing/installing_bare_metal/preparing-to-install-on-bare-metal.adoc#preparing-to-install-on-bare-metal[Preparing for bare metal cluster installation]
 * xref:../../installing/installing_bare_metal_ipi/ipi-install-post-installation-configuration.adoc#bmo-config-using-bare-metal-operator_ipi-install-post-installation-configuration[Configuration using the Bare Metal Operator]
 
