--- a/networking/ovn_kubernetes_network_provider/configuring-ipsec-ovn.adoc
+++ b/networking/ovn_kubernetes_network_provider/configuring-ipsec-ovn.adoc
@@ -15,6 +15,10 @@ IPsec is disabled by default. It can be enabled either during or after installin
 IPsec on {ibm-cloud-name} supports only NAT-T. Using ESP is not supported.
 ====
 
+The following support limitations exist for IPsec on a {product-title} cluster:
+
+* You must disable IPsec before updating to {product-title} 4.15. There is a known issue that can cause interruptions in pod-to-pod communication if you update without disabling IPsec. (link:https://issues.redhat.com/browse/OCPBUGS-43323[*OCPBUGS-43323*])
+
 Use the procedures in the following documentation to:
 
 * Enable and disable IPSec after cluster installation
